# ppr_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1_KC1.xlsx  2_KC2.xlsx  3_PB.xlsx  4_protect1.xlsx  5_protect2.xlsx  6_asps_1.xlsx  7_asps2.xlsx  9_asuptk.xlsx  Dockerfile  LICENSE  README.md  dev_docker-compose.yaml  docker-compose.local.yaml  docker-compose.proxy.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ppr_project_workflow.yml
nginx/: ks45-ru.conf  ks45.online.conf  proxy.conf
ppr_project/: manage.py  ppr.xlsx
ppr_project/api/: serializers.py  urls.py  views.py
ppr_project/bugtracker/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ppr_project/bugtracker/migrations/: 0001_initial.py  0002_alter_bug_close_date.py  0002_auto_20220803_1934.py  0003_auto_20220804_2252.py
ppr_project/core/: views.py
ppr_project/core/templatetags/: user_filters.py
ppr_project/media/: nav_tabs.txt
ppr_project/media/templates/: aprk_mokveld.docx  aprk_mokveld2.docx  asps_ades_vz.docx  asps_ades_vzhk.docx  avgm_little_vzo.docx  avgm_vse_vzo.docx  dku_vse_vzo.docx  dp_uirg.docx  dp_uirg2.docx  (+28 more)
ppr_project/ppr_project/: __init__.py  asgi.py  celery.py  dev_settings.py  settings.py  urls.py  wsgi.py
ppr_project/reports/: admin.py  apps.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
ppr_project/staticfiles/: dump.json
ppr_project/templates/: base.html  index.html
ppr_project/users/: admin.py  apps.py  forms.py  signals.py  tasks.py  urls.py  views.py
(+103 files in other folders)
